@@ -465,7 +465,7 @@ include_once('include/page_header.php');
 			$templates_clear = get_request('clear_templates', array());
 			$groups = get_request('groups', array());
 
-			if(isset($_REQUEST['hostid'])){
+			if(isset($_REQUEST['hostid']) && $_REQUEST['form'] != 'full_clone'){
 				$create_new = false;
 				$msg_ok = S_HOST_UPDATED;
 				$msg_fail = S_CANNOT_UPDATE_HOST;
