@@ -55,6 +55,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3350] fixed minor interface bug and it is now not possible to add host name longer then 64 chars (KB)
  - [ZBX-954] fix minor typos (Richlv)
  - [ZBX-1419] don't print an informative message during upgrade if no orphan hosts were found (Richlv)
 
